fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ html { height: 100% }
 }
 
 .accountform td {
-	text-align: left;
+	text-align: center;
 }
 
 .accountform h2 {
